--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'com.github.gabrielemariotti.cards:library:1.8.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.codemybrainsout.onboarding:onboarder:1.0.3'
 }
 
