--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:name=".application.SearchBangsaenApplication"
         android:allowBackup="true"
@@ -66,6 +67,8 @@
         <activity
             android:name=".searchcategories.activity.MapActivity"
             android:label="@string/title_activity_map">
+        </activity>
+        <activity android:name=".LoginActivity">
         </activity>
     </application>
 
