--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.0"
+    buildToolsVersion "24.0.3"
     defaultConfig {
         applicationId "com.buu.se.searchbangsaen"
         minSdkVersion 16
@@ -26,18 +26,20 @@ dependencies {
     //    compile 'com.google.firebase:firebase-core:9.4.0'
 //    compile 'com.google.firebase:firebase-database:10.0.1'
 //    compile 'com.google.firebase:firebase-messaging:9.0.0'
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
     compile 'com.jakewharton:butterknife:8.4.0'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:support-v4:25.2.0'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.github.gabrielemariotti.cards:library:1.8.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.codemybrainsout.onboarding:onboarder:1.0.3'
     compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile 'com.google.android.gms:play-services-location:10.2.0'
-    testCompile 'junit:junit:4.12'
+    compile 'com.yalantis:contextmenu:1.0.7'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 }
 
