--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key"/>
         <activity
             android:name=".StartAppActivity"
             android:screenOrientation="portrait">
-
             <!--
                 <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -52,25 +54,13 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
 
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
 
-        <activity
-            android:name=".searchcategories.activity.MapActivity"
-            android:label="@string/title_activity_map">
-        </activity>
         <activity android:name=".LoginActivity">
         </activity>
-        <activity android:name=".searchcategories.activity.ShowImageActivity">
+        <activity
+            android:name=".searchcategories.activity.ShowImageActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
     </application>
 
