big path by pongpon add auth and anything

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,11 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
+
         <activity
             android:name=".StartAppActivity"
             android:screenOrientation="portrait">
+
             <!--
                 <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -44,41 +46,44 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".searchcategories.activity.RestaurantSearchActivity"
+            android:name=".restaurant_categories.activity.RestaurantSearchActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-            android:name=".searchcategories.activity.DetailRestaurantActivity"
+            android:name=".restaurant_categories.activity.DetailRestaurantActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        </activity>
-
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key"/>
-
-        <activity
-            android:name=".searchcategories.activity.MapActivity"
-            android:label="@string/title_activity_map">
         </activity>
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".ProfileActivity">
-        </activity>
         <activity
-            android:name=".searchcategories.activity.ShowImageActivity"
+            android:name=".restaurant_categories.activity.ShowImageActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+        <activity
+            android:name=".hotel_categories.activity.HotelActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+        <activity
+            android:name=".hotel_categories.activity.DetailHotelActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+        <activity
+            android:name=".MapDirectionActivity"
+            android:label="@string/title_activity_map_direction"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".auth.activity.AuthActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+        <activity android:name=".LogoutActivity">
         </activity>
     </application>
 
